# Semestralka

./: .gitignore  CMakeLists.txt  README.md  vstupy.txt
docs/: sablona.aux  sablona.fdb_latexmk  sablona.fls  sablona.out  sablona.tex  sablona.toc
docs/appendices/: week7.m
src/: errors.h  lp.c  stack_check.c  vyroba.lp
src/file_proces/: file_proces.c  file_proces.h
src/file_proces/label/: label.c  label.h
src/file_proces/label/bounds/: bounds.c  bounds.h
src/file_proces/label/function/: function.c  function.h  operators.c  operators.h
src/file_proces/label/generals/: generals.c  generals.h
src/file_proces/label/subject_to/: subject_to.c  subject_to.h
src/flags/: flags.c  flags.h
src/node/: node.c  node.h
src/queue/: queue.c  queue.h  queue_check.c
src/simplex/: simplex.c  simplex.h
src/stack/: node.c  node.h  stack.c  stack.h  stack_check.c
